--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "letmeask1",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "<= 15.0.0"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
